fixes vertical spacing in header

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,9 @@ body {
 }
 
 .container {
-    margin: 20px;
+    padding: 20px 20px 0px 20px;
+    margin: 0 auto;
+    max-width: 1150px;
 }
 
 /*HEADER STYLES*/
@@ -30,6 +32,7 @@ header h1 {
     font-size: 25px;
     line-height: 34px;
     font-weight: 600;
+    font-weight: bolder;
 }
 
 /*NAV BAR STYLES*/
@@ -68,7 +71,8 @@ header nav a:hover {
 #hero h2 {
     font-weight: 100;
     font-size: 38px;
-    max-width: 600px;
+    max-width: 700px;
+    margin-top: 15px;
 }
 
 #hero #add-to-slack-button {
@@ -78,7 +82,12 @@ header nav a:hover {
 #hero #hero-image {
     margin-top: 45px;
     margin-left: -20px;
+    margin-bottom: -3px;
 }
+
+
+
+
 
 
 
